# universal-hamiltonian-framework

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY_3TIER.md  FINAL_SESSION_REPORT.md  GITHUB_CONTRIBUTION_WORKFLOW.md  GITHUB_PR_DESCRIPTION.md  GITHUB_PR_INSTRUCTIONS.md  GITHUB_SETUP.md  INDEX.md  LICENSE  MASTER_PLAN.md  PHASE2_COMPLETE.md  PHASE2_PR_SUMMARY.md  PHASE2_STATUS_DASHBOARD.md  PHASE2_TO_PHASE5_ROADMAP.md  PHASE2_VALIDATION_REPORT.md  README.md  SECURITY.md  SESSION_COMPLETE_SUMMARY.md  THREE_TIER_LOGIC_ANALYSIS.md  TIER1_3_VALIDATION_COMPLETE.md  TIER1_EXACT_CODE.md  VALIDATION_AND_CONTRIBUTION_PLAN.md  VALIDATION_STATUS.md  add_book_navigation.py  browser_demo.py  demo.html  demo.py  index.htm  interactive_demo.py  meta_parameters.json  mojo.toml  pyproject.toml  pytest.ini  quick_demo.py  references.bib  run_quantum_trading_demo.py  (+2 more)
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  pr_checks.yml  update_meta_status.yml
agents/: BOUNDARY.md  DEPLOYMENT_GUIDE.md  README.md  __init__.py  agent_orchestrator.py  agent_prompts.py  llm_provider.py  quickstart.py  requirements.txt  schemas.py
docs/: BOOK_INDEX.md  NAVIGATION.md  PAPER_TO_CODE_GUIDE.md  THREE_TIER_VALIDATION.md  api-reference.md  appendix-data-migration.md  axiom_independence_proof.md  book-of-mopati-chapter0.md  book-of-mopati-chapter10.md  book-of-mopati-chapter11.md  book-of-mopati-chapter12.md  book-of-mopati-chapter13.md  book-of-mopati-chapter14.md  book-of-mopati-chapter15.md  book-of-mopati-chapter2.md  book-of-mopati-chapter3.md  book-of-mopati-chapter4.md  book-of-mopati-chapter5.md  book-of-mopati-chapter6.md  book-of-mopati-chapter7.md  book-of-mopati-chapter8.md  book-of-mopati-chapter9-empirical-validation.md  book-of-mopati-chapter9.md  book-of-mopati.md  chapter0-exercises-COMPLETE.md  chapter0-exercises.md  ternary-logic-formalism.md
examples/: BEGINNER_GUIDE.md  FAQ.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  combined_demo.py  demo_consciousness_phi.py  demo_retrocausal_blockchain.py  domain_blockchain.py  domain_blockchain_TUTORIAL.md  domain_consciousness.py  domain_consciousness_TUTORIAL.md  domain_markets.py  domain_markets_TUTORIAL.md  market_backtesting.py  minimal_example.py  minimal_example_TUTORIAL.md  phase2_advanced_calibration.py  phase2_enhanced_framework.py  real_market_backtesting.py  reference_implementation.py  requirements.txt  tier3_comprehensive_validation.py  tier3_validation_output.txt  tier3_validation_results.json  tri_domain_demo.py  tutorial_01_getting_started.md  tutorial_02_market_dynamics.md
experiments/markets/: .env.template  API_SETUP.md  CREDENTIALS_SETUP.md  TECH_STACK.md  VALIDATION_STATUS.md  requirements.txt  test_all_connectors.py
gh_logs/: files.json
meta/: meta_shields.json
papers/: bioenergetic-consciousness-paper.md  hl-formal-paper.md
scripts/: debug_fetch_run.py  debug_market_reversion.py  debug_market_step.py  debug_pendulum.py  debug_phi_calc.py  debug_phi_hamiltonian.py  fetch_failed_run_logs.py  monitor_gh_runs.py  rerun_checks.ps1  rerun_gh_checks.py  run_meta_check.py  run_unified_validation.py  smoke_test_with_act.py  validate_github_workflows.py
src/: __init__.py
src/backends/: jax_engine.py
src/compiler/: __init__.py  hamiltonian_dsl.py  symbolic_engine.py
src/core/: __init__.py  canonical_transforms.pyx  cross_domain_coupling.py  delta_s_operator.py  hamiltonian_engine.mojo  invariant_algebra.py  propagator.mojo
src/domains/: __init__.py  apex_quantum_ict.py  bioenergetic_consciousness.py  blockchain_consensus.py  classical_mechanics.pyx  consciousness_field.mojo  domain_adapters.py  market_dynamics.py  quantum_systems.mojo
src/examples/: demo_consciousness_phi.py
src/hl/: book_encoder.py  canonical_library.py
src/meta/: __init__.py  self_cicd.py
src/neovim/: README.md
src/quantum_trading/: __init__.py
src/validation/: __init__.py  experimental_protocols.py  hl_protocols.md  unified_validation.py
src/viz/: __init__.py  bioenergetic_visualizations.py  (+3 more)
tests/: conftest.py  test_advanced_intelligence.py  test_apex_quantum_ict.py  test_core.py  test_domains.py  test_intelligent_suite.py
(+33 files in other folders)
